Supressed security manager warnings