@@ -134,6 +134,9 @@ tasks {
     publishPlugin {
         dependsOn(patchChangelog)
     }
+    runIde {
+        jvmArgs("-Djava.security.manager=allow")
+    }
 }
 
 intellijPlatformTesting {
